--- a/package.json
+++ b/package.json
@@ -48,7 +48,20 @@
     "react-slick": "0.29.0",
     "sass": "1.66.1",
     "styled-components": "5.3.5",
-    "webpack": "5.88.2"
+    "webpack": "5.88.2",
+    "axios": "^0.21.2",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "next-redux-wrapper": "^6.0.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "peerDependencies": {
     "react": ">=16.0.0",
