--- a/package.json
+++ b/package.json
@@ -36,32 +36,34 @@
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "classnames": "2.3.2",
-    "moment": "2.29.4",
-    "next": "12.2.5",
-    "nouislider": "14.7.0",
-    "prop-types": "15.8.1",
-    "react": ">=16.0.0",
-    "react-datetime": "3.1.1",
-    "react-dom": ">=16.0.0",
-    "react-router-dom": "^6.20.0",
-    "react-slick": "0.29.0",
-    "sass": "1.66.1",
-    "styled-components": "5.3.5",
-    "webpack": "5.88.2",
+    "@material-ui/pickers": "^3.3.11",
     "axios": "^0.21.2",
     "bcryptjs": "^2.4.3",
+    "classnames": "2.3.2",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "2.29.4",
+    "next": "12.2.5",
     "next-redux-wrapper": "^6.0.2",
+    "notistack": "^3.0.1",
+    "nouislider": "14.7.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "prop-types": "15.8.1",
+    "react": ">=16.0.0",
+    "react-datetime": "3.1.1",
+    "react-dom": ">=16.0.0",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^6.20.0",
+    "react-slick": "0.29.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sass": "1.66.1",
+    "styled-components": "5.3.5",
+    "webpack": "5.88.2"
   },
   "peerDependencies": {
     "react": ">=16.0.0",
