--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "react": ">=16.0.0",
     "react-datetime": "3.1.1",
     "react-dom": ">=16.0.0",
+    "react-otp-input": "^3.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^6.20.0",
     "react-slick": "0.29.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "sass": "1.66.1",
     "styled-components": "5.3.5",
