--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "rsuite": "^5.46.1",
     "sass": "1.66.1",
     "styled-components": "5.3.5",
     "webpack": "5.88.2"
