--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "rsuite": "^5.46.1",
     "sass": "1.66.1",
     "styled-components": "5.3.5",
+    "validator": "^13.11.0",
     "webpack": "5.88.2"
   },
   "peerDependencies": {
