--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-datetime": "3.1.1",
     "react-dom": ">=16.0.0",
     "react-otp-input": "^3.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^6.20.0",
     "react-slick": "0.29.0",
