--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bcryptjs": "^2.4.3",
     "classnames": "2.3.2",
     "cookie-parser": "^1.4.5",
+    "date-fns": "^3.0.5",
     "dotenv": "^8.2.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
