initial complete for frontend of shopping cart

--- a/package.json
+++ b/package.json
@@ -43,13 +43,16 @@
     "cookie-parser": "^1.4.5",
     "date-fns": "^3.0.5",
     "dotenv": "^8.2.0",
+    "downshift": "^8.3.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "leaflet": "^1.9.4",
     "moment": "2.29.4",
     "next": "12.2.5",
     "next-redux-wrapper": "^6.0.2",
     "notistack": "^3.0.1",
     "nouislider": "14.7.0",
+    "opencage-api-client": "^1.0.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -57,6 +60,7 @@
     "react": ">=16.0.0",
     "react-datetime": "3.1.1",
     "react-dom": ">=16.0.0",
+    "react-leaflet": "^4.2.1",
     "react-otp-input": "^3.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^7.2.0",
