--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
     "@material-ui/icons": "4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@material-ui/pickers": "^3.3.11",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.3.0",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "axios": "^0.21.2",
     "bcryptjs": "^2.4.3",
     "classnames": "2.3.2",
@@ -73,6 +78,7 @@
     "sass": "1.66.1",
     "styled-components": "5.3.5",
     "validator": "^13.11.0",
+    "web-vitals": "^3.5.1",
     "webpack": "5.88.2"
   },
   "peerDependencies": {
