--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns": "^3.0.5",
     "dotenv": "^8.2.0",
     "downshift": "^8.3.1",
+    "html-to-text": "^9.0.5",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.9.4",
