--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/google-maps-react": "^2.0.5",
     "axios": "^0.21.2",
     "bcryptjs": "^2.4.3",
     "classnames": "2.3.2",
@@ -49,6 +50,7 @@
     "date-fns": "^3.0.5",
     "dotenv": "^8.2.0",
     "downshift": "^8.3.1",
+    "google-maps-react": "^2.0.6",
     "html-to-text": "^9.0.5",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
