--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "passport-local": "^1.0.0",
     "prop-types": "15.8.1",
     "react": ">=16.0.0",
+    "react-custom-scroll": "^5.0.0",
     "react-datetime": "3.1.1",
     "react-dom": ">=16.0.0",
     "react-leaflet": "^4.2.1",
