--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.9.4",
-    "moment": "2.29.4",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "next-redux-wrapper": "^6.0.2",
     "notistack": "^3.0.1",
@@ -66,6 +66,7 @@
     "passport-local": "^1.0.0",
     "prop-types": "15.8.1",
     "react": ">=16.0.0",
+    "react-big-calendar": "^1.12.2",
     "react-custom-scroll": "^5.0.0",
     "react-datetime": "3.1.1",
     "react-dom": ">=16.0.0",
@@ -80,6 +81,7 @@
     "redux-thunk": "^2.3.0",
     "rsuite": "^5.46.1",
     "sass": "1.66.1",
+    "smart-webcomponents-react": "^19.0.5",
     "styled-components": "5.3.5",
     "validator": "^13.11.0",
     "web-vitals": "^3.5.1",
